# openapi.3.0.yml
@@ -265,6 +265,12 @@ paths:
           description: note label
           schema:
             type: string
+        - in: query
+          required: false
+          name: archived
+          description: note archived
+          schema:
+            type: boolean
       responses:
         200:
           description: OK
